welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:4: error: too many arguments for method getCouleurSol: ()java.awt.Color
		getCouleurSol(i)
                             ^Array1:8: error: type mismatch;
 found   : Int
 required: java.awt.Color
		T(i) = color(i)
                             ^Array1:11: error: not enough arguments for method color: (i: java.awt.Color)java.awt.Color.
Unspecified value parameter i.
		color()
                     ^Array1:13: error: type mismatch;
 found   : Int
 required: java.awt.Color
		T(i)=color(i)
                           ^