welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	def color(i:Color):Color = {
		getCouleurSol(i)
	}
	var T = new Array[Color](getMondeHauteur());
	for (i <- 1 to T.length) {
		T(i) = color(i)
	}
	for (i<- 1 to getMondeHauteur()){
		color()
		avance()
		T(i)=color(i)
	}
	for(i<-1 to getMondeLargeur()) {
		baisseBrosse()
		leveBrosse()
		avance()
	}
	
	
}
